# ShuiyuanAnnualReport

./: .gitignore  README.md  client.py  getExtraEmoji.py  get_custom_emoji.py  justfile  main.py  main.spec  pyproject.toml  requirements.txt
modules/: like.py  pr.py  report.py  topic.py  wc.py
modules/cards/: __init__.py  card.py  emojicard.py  likecard.py  postcard.py  topiccard.py  usercard.py  wccard.py
resources/: custom-emoji.html  custom_emoji.json  extra_emoji.json  stopwords.txt
ui/: app.py  layout.py
utils/: __init__.py  constant.py  url.py  utils.py
