[project]
name = "shuiyuanannualreport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "jieba>=0.42.1",
    "matplotlib>=3.10.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.ruff.lint]
ignore = ["E722"]
